Fix double border issue.
Fix #115

--- a/sources/stylesheets/components/_site-footer.scss
+++ b/sources/stylesheets/components/_site-footer.scss
@@ -30,8 +30,8 @@
     @include hyphens(auto);
     display: table;
     width: 100%;
-    border-top: 1px solid rgba($grey-2, 1);
-    border-bottom: 1px solid rgba($grey-2, 1);
+    // border-top: 1px solid rgba($grey-2, 1);
+    // border-bottom: 1px solid rgba($grey-2, 1);
     @media screen and (max-width: $mobile-1) {
       display: block;
     }
@@ -42,6 +42,7 @@
       box-sizing: border-box;
       width: 50%;
       vertical-align: top;
+      border-top: 1px solid rgba($grey-2, 1);
       @media screen and (max-width: $mobile-1) {
         display: block;
         width: 100%;
